--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     image: "image11.png" // 확장자 .png로 변경
                 },
                 {
-                    answer: "열차차",
+                    answer: "열차",
                     image: "image12.png" // 확장자 .png로 변경
                 }
             ];
